--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   scroll-behavior: smooth;
   font-family: "Josefin Sans", sans-serif;
